# racer

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
