[package]
name = "racer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "racer"
test = false

[dependencies]
embedded-graphics = "0.8.2"
embedded-hal = "1.0.0"
ssd1306 = "0.10.0"
smart-leds = "0.4.0"
esp-backtrace = { path = "../../esp-hal/esp-backtrace", features = ["esp32c3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { path = "../../esp-hal/esp-bootloader-esp-idf", features = ["esp32c3"] }
esp-hal = { path = "../../esp-hal/esp-hal", features = ["esp32c3", "log-04", "unstable"] }
esp-println = { path = "../../esp-hal/esp-println", features = ["log-04"] }
esp-alloc = { path = "../../esp-hal/esp-alloc" }
esp-radio = { path = "../../esp-hal/esp-radio", features = ["wifi", "esp32c3"] }
esp-rtos = { path = "../../esp-hal/esp-rtos", features = ["esp-radio", "embassy", "log-04", "esp32c3"] }
embassy-executor = "0.10.0"
embassy-net = { version = "0.9.0", features = ["tcp", "udp", "dhcpv4", "proto-ipv4"] }
embassy-time = "0.5.0"
heapless = "0.8"
static_cell = "2.1"
ufmt = "0.2"
embedded-io-async = "0.6"
httparse = { version = "1.10.1", default-features = false }

[profile.release]
debug = true
debug-assertions = true
lto = "fat"
codegen-units = 1
